<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="watched_later">Watched later</string>
    <string name="watched">Watched</string>
    <string name="home">Home</string>
    <string name="registerInLogin">When don\'t have account?</string>
    <string name="login">Log In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="loginInRegister">Already have the account?</string>
    <string name="logout">Logout</string>
    <string name="watched_movies">watched movies</string>
    <string name="watch_later_movies">watch later</string>
    <string name="movies">movies</string>
    <string name="details_movie">detail</string>
    <string name="name_of_application">The Movies</string>
    <string name="empty_list">The list is empty</string>
    <string name="password_empty">Password should be not empty</string>
    <string name="email_empty">Email should be not empty</string>
    <string name="not_validate">email or password is not validate</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="cancel">cancel</string>
</resources>