<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/detailsItemFragment"
        android:name="com.example.myapplication.views.DetailsItemFragment"
        android:label="@string/details_movie"
        tools:layout="@layout/fragment_details_item">
        <action
            android:id="@+id/action_detailsItemFragment_to_watchLaterFragment"
            app:destination="@id/watchLaterFragment" />
        <action
            android:id="@+id/action_detailsItemFragment_to_watchedFragment"
            app:destination="@id/watchedFragment" />
        <action
            android:id="@+id/action_detailsItemFragment_to_mainFragment2"
            app:destination="@id/mainFragment" />
    </fragment>
    <fragment
        android:id="@+id/watchLaterFragment"
        android:name="com.example.myapplication.views.WatchLaterFragment"
        android:label="@string/watch_later_movies"
        tools:layout="@layout/fragment_watch_later" />
    <fragment
        android:id="@+id/watchedFragment"
        android:name="com.example.myapplication.views.WatchedFragment"
        android:label="@string/watched_movies"
        tools:layout="@layout/fragment_watched">
        <action
            android:id="@+id/action_watchedFragment_to_detailsWatchedFragment"
            app:destination="@id/detailsWatchedFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailsWatchedFragment"
        android:name="com.example.myapplication.views.DetailsWatchedFragment"
        android:label="@string/details_movie"
        tools:layout="@layout/fragment_details_watched" />
    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.myapplication.views.MainFragment"
        android:label="@string/movies"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainFragment2_to_detailsItemFragment"
            app:destination="@id/detailsItemFragment" />
    </fragment>
</navigation>